<resources>
    <string name="app_name">فروشگاه</string>
    <string name="app_version">1.0</string>
    <string name="app_year">2016</string>
    <string name="app_copyright">androidlife.ir</string>
    <string name="app_email">info@androidlife.ir</string>
    <string name="app_site">http://androidlife.ir</string>
    <string name="facebook_app_id">345345345345345</string>
    <string name="banner_ad_unit_id">ca-a1</string>
    <string name="app_share_text">دانلود برنامه: https://cafebazaar.ir/developer/korosh_saberi/</string>
    <string name="action_login">ورود</string>
    <string name="action_signup">ثبت نام</string>
    <string name="action_logout">خروج</string>
    <string name="action_settings">تنظیمات</string>
    <string name="action_continue">ادامه دادن</string>
    <string name="action_unblock">خروج از بلاک</string>
    <string name="action_block">بلاک</string>
    <string name="action_about">درباره ما</string>
    <string name="action_ok">تایید</string>
    <string name="action_yes">بله</string>
    <string name="action_no">خیر</string>
    <string name="action_copy">کپی</string>
    <string name="action_save">ذخیره کردن</string>
    <string name="action_send">ارسال</string>
    <string name="action_open">باز کردن</string>
    <string name="action_edit">ویرایش</string>
    <string name="action_reply">پاسخ دادن</string>
    <string name="action_refresh">تازه سازی</string>
    <string name="action_report">گزارش دادن</string>
    <string name="action_remove">حذف کردن</string>
    <string name="action_remove_chat">حذف چت</string>
    <string name="action_deactivate">غیرفعال کردن</string>
    <string name="action_create">ساختن</string>
    <string name="action_cancel">انصراف</string>
    <string name="action_close">بستن</string>
    <string name="action_more">نمایش بیشتر</string>
    <string name="action_post">پست</string>
    <string name="action_search">جست و جو</string>
    <string name="action_retry">تلاش مجدد</string>
    <string name="action_turn_on">روشن کردن</string>
    <string name="action_turn_off">خاموش کردن</string>
    <string name="action_select_birth">تاریخ تولد</string>
    <string name="action_camera">دوربین</string>
    <string name="action_gallery">انتخاب از گالری</string>
    <string name="action_copy_url">کپی لینک</string>
    <string name="action_open_url">باز کردن در مرورگر</string>
    <string name="settings_allow_messages">دریافت پیام</string>
    <string name="settings_allow_messages_summary">شما قادر خواهید بود از سایر کاربران به طور مستقیم پیام دریافت کنید</string>
    <string name="action_share">اشتراک گذاری</string>
    <string name="action_new">محصول جدید</string>
    <string name="action_profile_edit_photo">ویرایش تصویر</string>
    <string name="action_profile_edit_cover">ویرایش کاور</string>
    <string name="action_profile_edit">ویرایش کردن</string>
    <string name="action_login_with_facebook">ورود با فیسبوک</string>
    <string name="action_signup_with_facebook">ثبت نام با فیسبوک</string>
    <string name="action_connect_with_facebook">اتصال به فیسبوک</string>
    <string name="action_remove_connection">حذف اتصال</string>
    <string name="action_regular_signup">بازگشت به ثبت نام عادی</string>
    <string name="action_forgot_password">فراموشی رمز عبور</string>
    <string name="label_profile_report_0">اسپم</string>
    <string name="label_profile_report_1">نفرت انگیز</string>
    <string name="label_profile_report_2">غیراخلاقی</string>
    <string name="label_profile_report_3">پروفایل جعلی</string>
    <string name="label_profile_report_4">امنیتی</string>
    <string name="label_sex_undefined">جنسیت مشخص نشده است</string>
    <string name="label_sex_male">مرد</string>
    <string name="label_sex_female">زن</string>
    <string name="placeholder_password">رمز عبور</string>
    <string name="placeholder_login">نام کاربری</string>
    <string name="placeholder_fullname">نام کامل</string>
    <string name="placeholder_location">موقعیت</string>
    <string name="placeholder_facebook_page">آدرس اینستاگرام</string>
    <string name="placeholder_instagram_page">آدرس تلگرام</string>
    <string name="placeholder_bio">در مورد شما</string>
    <string name="placeholder_email">ایمیل</string>
    <string name="placeholder_phone">شماره شما ، برای مثال : 989301119999+ فرمت صحیح است</string>
    <string name="placeholder_subject">موضوع</string>
    <string name="placeholder_support_detail">پیام خود را بنویسید</string>
    <string name="placeholder_current_password">رمز فعلی</string>
    <string name="placeholder_new_password">رمز جدید</string>
    <string name="placeholder_item_category">دسته بندی</string>
    <string name="placeholder_item_title">نام محصول</string>
    <string name="placeholder_item_login">نام کاربری ، ایمیل یا شماره تلفن</string>
    <string name="placeholder_item_passw">رمز عبور</string>
    <string name="placeholder_item_url">وبسایت</string>
    <string name="placeholder_item_description">توضیحات</string>
    <string name="placeholder_search">جست و جو</string>
    <string name="placeholder_comment">نظر خود را بگویید &#8230;</string>
    <string name="placeholder_message">پیام خود را بنویسید &#8230;</string>
    <string name="msg_loading">لطفا صبر کنید</string>
    <string name="msg_loading_2">لطفا صبر کنید</string>
    <string name="msg_network_error">لطفا اتصال اینترنت خود را بررسی کنید</string>
    <string name="msg_account_blocked">این اکانت توسط مدیریت مسدود شده است</string>
    <string name="msg_copied_to_clipboard">در حافظه کپی شد</string>
    <string name="msg_enter_item">لطفا چیزی بنویسید یا تصویری اضافه کنید</string>
    <string name="msg_enter_msg">لطفا چیزی بنویسید یا تصویری اضافه کنید</string>
    <string name="msg_send_msg_error">شما نمی توانید به این کاربر پیام ارسال کنید</string>
    <string name="msg_item_posted">محصول با موفقیت اضافه شد</string>
    <string name="msg_item_saved">محصول با موفقیت ذخیره شد</string>
    <string name="msg_password_changed">رمز عبور با موفقیت تغییر یافت</string>
    <string name="msg_settings_saved">تنظیمات با موفقیت ذخیره شد</string>
    <string name="msg_ticket_send_success">درخواست شما با موفقیت ارسال شد . در صورت پاسخ دادن به درخواست شما ، ایمیل اطلاع رسانی برایتان ارسال خواهد شد</string>
    <string name="msg_password_reset_link_sent">یک ایمیل حاوی لینک تغییر رمز عبور برای شما ارسال شد</string>
    <string name="msg_no_such_user_in_bd">کاربری یافت نشد</string>
    <string name="msg_connect_to_facebook_success">شما با موفقیت این برنامه را به اکانت فیسبوک خود وصل کرده اید</string>
    <string name="msg_connect_to_facebook_error">در حال حاضر برنامه به اکانت فیسبوک شما متصل هست</string>
    <string name="msg_connect_to_facebook_removed">حذف اتصال فیسبوک به برنامه</string>
    <string name="msg_comment_has_been_added">نظر شما درج شد</string>
    <string name="msg_chat_has_been_removed">چت حذف شد</string>
    <string name="msg_profile_removed_from_blacklist">حذف کاربر از لیست مسدود شده ها</string>
    <string name="msg_profile_link_copied">لینک پروفایل در حافظه موقت کپی شد</string>
    <string name="msg_profile_added_to_blacklist">افزودن کاربر به لیست مسدود شده ها</string>
    <string name="msg_comments_disabled">کاربر نمی تواند روی محصولات شما نظری اضافه کند</string>
    <string name="msg_post_has_been_already_shared">در حال حاضر این محصول را به اشتراک گذاشته اید</string>
    <string name="error_signin">نام کاربری یا رمز عبور نادرست است</string>
    <string name="error_internet_connection">به اینترنت وصل نیستید</string>
    <string name="error_data_loading">در هنگام لود شدن اطلاعات خطایی رخ داده است . اتصال اینترنت خود را بررسی کنید</string>
    <string name="error_field_empty">تمامی موارد را پر کنید</string>
    <string name="error_wrong_format">فرمت اشتباه است</string>
    <string name="error_small_password">حداقل 6 کاراکتر</string>
    <string name="error_small_username">حداقل 5 کاراکتر</string>
    <string name="error_small_fullname">حداقل 2 کاراکتر</string>
    <string name="error_login_taken">این نام کاربری قبلا انتخاب شده است</string>
    <string name="error_email_taken">این ایمیل قبلا به ثبت رسیده است</string>
    <string name="error_phone_taken">این شماره قبلا استفاده شده است</string>
    <string name="error_password">رمز عبور نادرست است</string>
    <string name="error_email">ایمیل نادرست است</string>
    <string name="label_gcm_comment">برای محصول شما یک نظر جدید درج شده است</string>
    <string name="label_gcm_message">شما یک پیام جدید دارید</string>
    <string name="label_gcm_comment_reply">به نظر شما پاسخی داده شده است</string>
    <string name="label_authorization_via_facebook">اتصال با فیسبوک</string>
    <string name="label_account_connected_to_facebook">اتصال با فیسبوک</string>
    <string name="label_account_connect_to_facebook">اتصال این برنامه به سایر حساب های شما در شبکه های مجازی</string>
    <string name="label_empty_list">موردی یافت نشد</string>
    <string name="label_post_share">اشتراک گذاری محصول</string>
    <string name="label_block">مسدود کردن</string>
    <string name="label_block_msg">قادر نخواهد بود برای محصولات شما نظری اضافه کند یا پیامی بگذارد</string>
    <string name="label_delete">حذف کردن</string>
    <string name="label_delete_msg">آیا می خواهید این محصول را حذف کنید؟</string>
    <string name="label_delete_comment">آیا می خواهید این نظر را حذف کنید؟</string>
    <string name="label_post_report_title">گزارش دادن تخلف</string>
    <string name="label_last_message_image">تصویر</string>
    <string name="label_you_havent_items">شما محصولی ندارید</string>
    <string name="label_user_havent_items">این کاربر محصولی اضافه نکرده است</string>
    <string name="label_profile_reported">گزارش دادن پروفایل</string>
    <string name="label_post_reported">محصول گزارش داده شده است</string>
    <string name="label_select_img">انتخاب تصویر</string>
    <string name="label_delete_img">حذف تصویر؟</string>
    <string name="label_account_disabled">اکانت مسدود شده است</string>
    <string name="label_search_start_screen_msg">پیدا کردن محصول با نام یا توضیحات</string>
    <string name="label_search_results">محصولات یافت شده :</string>
    <string name="label_search_results_error">چیزی پیدا نشد</string>
    <string name="label_comment_added">یک نظر اضافه کرد</string>
    <string name="label_comment_reply_added">به نظر شما پاسخ داد</string>
    <string name="label_post_to_dialog_title">دسته بندی</string>
    <string name="label_post_location">موقعیت :</string>
    <string name="label_items">محصولات</string>
    <string name="label_comments">نظرات</string>
    <string name="label_online">آنلاین</string>
    <string name="label_offline">آفلاین</string>
    <string name="label_to">به</string>
    <string name="signup_label_1">با کلیک کردن روی ثبت نام ، شما موافقت می کنید با</string>
    <string name="signup_label_terms_and_policies">قوانین و مقررات</string>
    <string name="settings_header_general">عمومی</string>
    <string name="settings_header_others">دیگر موارد</string>
    <string name="settings_header_about">درباره ما</string>
    <string name="settings_header_notifications">اطلاع رسانی ها</string>
    <string name="settings_notifications_reviews">بازدیدها</string>
    <string name="settings_notifications_likes">لایک ها</string>
    <string name="settings_notifications_comments">نظرات</string>
    <string name="settings_notifications_messages">پیام خصوصی</string>
    <string name="settings_notifications_comment_reply">پاسخ دادن به نظر شما</string>
    <string name="settings_version">ورژن</string>
    <string name="settings_logout">خروج</string>
    <string name="settings_copyright_info">اطلاعات کپی رایت</string>
    <string name="label_item_title_placeholder">نام محصول</string>
    <string name="label_item_price_placeholder">قیمت ( به تومان )</string>
    <string name="label_item_description_placeholder">توضیحات</string>
    <string name="label_category">دسته بندی</string>
    <string name="label_allow_comments">اجازه نظر گذاشتن برای این محصول</string>
    <string name="label_add_location">افزودن موقعیت</string>
</resources>